# RapidCull

./: .gitignore  .graphifyignore  IMPLEMENTATION_PLAN.md  README.md  package-lock.json  pyproject.toml
.opencode/command/: commit.md  pr.md
.tmp/external-context/: .manifest.json
docs/: 20260307T080227--photo-library-acceptance-tests__projects.md  20260307T080227--photo-library-requirements__projects.md  20260307T080227--photo-library-test-plan__projects.md  20260307T090000--photo-fixture-dataset-test-plan__projects.md  20260307T091500--photo-library-execution-checklist__projects.md  20260307T093000--rapidcull-dependencies__projects.md  20260328T223918--query-grammar-v1-behavior__projects.md  20260329T080544--query-evaluation-contract-v1__projects.md  api-reference.md  cli-reference.md  ops-guide.md  query-grammar.md  query-recipes.md  user-guide.md
docs/lessons-learned/: .20260327T020000--fr-021-query-error-diagnostics-lessons-learned__projects.md.swp  20260307T113500--photo-library-pr-plan-lessons-learned__projects.md  20260307T123000--fr-004-005-lessons-learned__projects.md  20260307T130500--fr-006-008-lessons-learned__projects.md  20260307T133500--foundation-split-separation-of-concerns-lessons-learned__projects.md  (+40 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
scripts/: bootstrap.sh  script-notes.md  verify_system_deps.sh
(+168 files in other folders)
